@@ -42,7 +42,8 @@ int add_string_as (const char *s, const char *name);
 
 char *get_named_string (const char *name);
 
-int process_string_command (const char *line, PRN *prn);
+int process_string_command (const char *line, const DATAINFO *pdinfo,
+			    PRN *prn);
 
 int substitute_named_strings (char *line);
 
